err/soma-workflow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/soma_workflow'...
Listing './lib/python3.5/site-packages/soma_workflow/check_requirement'...
Listing './lib/python3.5/site-packages/soma_workflow/gui'...
Listing './lib/python3.5/site-packages/soma_workflow/gui/icon'...
Listing './lib/python3.5/site-packages/soma_workflow/test'...
Listing './lib/python3.5/site-packages/soma_workflow/test/job_tests'...
Listing './lib/python3.5/site-packages/soma_workflow/test/workflow_tests'...
Listing './lib/python3.5/site-packages/soma_workflow/test/workflow_tests/workflow_examples'...
Listing './lib/python3.5/site-packages/soma_workflow-2.9.0.egg-info'...
Listing './lib/python3.5/site-packages/somadrmaa'...
Compiling './lib/python3.5/site-packages/somadrmaa/nt.py'...
***   File "./lib/python3.5/site-packages/somadrmaa/nt.py", line 103
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './share'...
Listing './share/python-wheels'...
